# ImageTracker

./: BilateralVectorImageFilter.h  BlurFilterSchedule.cxx  BlurFilterSchedule.h  CLGOpticFlowImageFilter.h  CLGOpticFlowPipeline.cxx  CLGOpticFlowPipeline.h  CMakeLists.txt  CommonTypes.h  DemonsPipeline.cxx  DemonsPipeline.h  Feature.h  FeatureTrackingPipeline.cxx  FeatureTrackingPipeline.h  FilePattern.cxx  FilePattern.h  FileSet.cxx  FileSet.h  FileSetImageReader.cxx  FileSetImageReader.h  GlobalRegistrationPipeline.cxx  GlobalRegistrationPipeline.h  HarrisFeatureDetector.cxx  HarrisFeatureDetector.h  ImageRegistration.cxx  ImageRegistration.h  ImageStatistics.cxx  ImageStatistics.h  ItkMagickIO.cxx  ItkMagickIO.h  LocalUsewxWidgets.cmake  Logger.cxx  Logger.h  MultiImageRegistrationProcessor.cxx  MultiImageRegistrationProcessor.h  MultiRegionRegistration.cxx  MultiRegionRegistration.h  MultiRegionRegistrationPipeline.cxx  MultiRegionRegistrationPipeline.h  MultiResolutionRegistration.h  MultiResolutionRegistrationPipeline.cxx  (+14 more)
Tests/: AllTests.cxx  CMakeLists.txt  TestBilateralVectorFilter.h  TestCLGOpticFlowImageFilter.h  TestDemonsPipeline.cxx  TestDemonsPipeline.h  TestFileSet.cxx  TestFileSet.h  TestFileSetImageReader.cxx  TestFileSetImageReader.h  TestGlobalRegistrationPipeline.cxx  TestGlobalRegistrationPipeline.h  TestHarrisFeatureDetector.cxx  TestHarrisFeatureDetector.h  TestImageMagick.h  TestImagePyramid.h  TestImageRescale.cxx  TestImageRescale.h  TestImageStatistics.cxx  TestImageStatistics.h  TestImageWindow.cxx  TestImageWindow.h  TestItkMagickIO.h  TestLogger.cxx  TestLogger.h  TestMultiRegionRegistration.cxx  TestMultiRegionRegistration.h  TestMultiResolutionRegistration.h  TestMultiResolutionRegistrationPipeline.h  TestNaryMeanImageFilter.h  TestRandomVectorImage.h  TestRegistrationMotionFilter.h  TestRegistrationOutput.cxx  TestRegistrationOutput.h  TestSort.h  TestStopWatch.cxx  TestStopWatch.h  TestThresholdPipeline.cxx  TestThresholdPipeline.h  TestTransformGroup.cxx  (+11 more)
apps/: ApplyScale.cxx  AverageVectorImages.cxx  CMakeLists.txt  CompareMeanGradientLog.cxx  CompareVideos.cxx  ComputeAverageLocalContrast.cxx  ComputeCLGOpticFlow.cxx  ComputeFlowError.cxx  ComputeHornOpticalFlow.cxx  ComputeStrain.cxx  ConvertScalar.cxx  ConvertVolume.cxx  FindBackground.cxx  FindFixedImage.cxx  FindSurface.cxx  GradientOcclusion.cxx  ImageTrackerApp.cxx  IntegrateFlowField.cxx  IntegrateOpticalFlow.cxx  ModulateDiscs.cxx  ModulateImages.cxx  ModulateStrips.cxx  MultiResolutionOpticalFlow.cxx  PanRegion.cxx  ReconstructSurface.cxx  RotateRegion.cxx  SubtractBackground.cxx  TestAttenuation.cxx  TestDataSource.cxx  TestFFTComplex.cxx  TestHarrisFeatureDetector.cxx  TestImageSetReader.cxx  TestLogging.cxx  TestMeanAttenuationRepair.cxx  TestNeighborhoodAttenuationRepair.cxx  TestPadImageFilter.cxx  TestVariance.cxx  TransformImages.cxx  TranslationGenerator.cxx
common/: CMakeLists.txt  CommonTypes.h  FilePattern.h  FileSet.cxx  FileSet.h  FileUtils.cxx  FileUtils.h  Logger.cxx  Logger.h  MathUtils.h  Mutex.cxx  Mutex.h  MutexLocker.cxx  MutexLocker.h  Sort.cxx  Sort.h  StopWatch.cxx  file_list.cpp
filters/: AddConstantImageFilter.h  AttenuationCalibrationFilter.h  CLGOpticFlowImageFilter.h  CLGOpticalFlowIterativeStepImageFilter.h  CMakeLists.txt  CentralDifferenceImageFilter.h  DerivativesToSurfaceImageFilter.h  GaussSeidelIterativeStepImageFilter.h  Gaussian2DVectorFilter.h  GaussianFunctionImageFilter.h  GaussianGradientImageFilter.h  HarrisFeatureInterestImageFilter.h  HornOpticalFlowImageFilter.h  HornOpticalFlowIterativeStepImageFilter.h  LocalContrastImageFilter.h  ModulateRegionImageFilter.h  MultiResolutionOpticalFlowMethod.h  MultiResolutionRegistration.h  NaryJoinImageFilter.h  NaryMeanImageFilter.h  NaryMeanVectorImageFilter.h  NaryMedianImageFilter.h  NaryMinimumImageFilter.h  NaryVarianceImageFilter.h  NonZeroLog10ImageFilter.h  OpticalFlowImageFilter.h  PadFunctorImageFilter.h  PeakSNRImageToImageMetric.h  PercentileImageMetric.h  Power10ImageFilter.h  RungeKuttaSolver.h  StrainTensorImageFilter.h  StructureTensorImageFilter.h  WarpImageErrorFilter.h  itkFFTComplexToComplexImageFilter.h  itkFFTWComplexToComplexImageFilter.h  itkRealToComplexImageFilter.h
image/: CMakeLists.txt  DataSource.cxx  DataSource.h  FileSetImageReader.cxx  FileSetImageReader.h  ImageFileSet.h  ImageFileSetReader.cxx  ImageFileSetReader.h  ImageFileSetTypes.h  ImageSetReader.h  ImageUtils.cxx  ImageUtils.h  TransformGroup.cxx  TransformGroup.h  VectorFileSet.h  VectorFileSetReader.cxx  VectorFileSetReader.h
pipelines/: ApplyTransformsPipeline.cxx  ApplyTransformsPipeline.h  CLGOpticFlowPipeline.cxx  CLGOpticFlowPipeline.h  CMakeLists.txt  HornOpticalFlowPipeline.cxx  HornOpticalFlowPipeline.h  IntegrateFlowFieldPipeline.cxx  IntegrateFlowFieldPipeline.h  ItkImagePipeline.cxx  ItkImagePipeline.h  ItkPipeline.cxx  ItkPipeline.h  ItkPipelineObserver.h  ItkVectorPipeline.cxx  ItkVectorPipeline.h  MultiResolutionOpticalFlowPipeline.cxx  MultiResolutionOpticalFlowPipeline.h  MultiResolutionRegistrationPipeline.cxx  MultiResolutionRegistrationPipeline.h  RemovePartialOcclusionsPipeline.cxx  RemovePartialOcclusionsPipeline.h  StrainTensorPipeline.cxx  StrainTensorPipeline.h  TextPipelineObserver.cxx  TextPipelineObserver.h
vtkView/: CMakeLists.txt  ConnectVTKITK.h  ImageWindow.cxx  ImageWindow.h  ItkMagickIO.cxx  ItkMagickIO.h  TestVtk.cxx  Use_ImageMagick.cmake  VtkCanvas.cxx  VtkCanvas.h  VtkViewer.cxx  VtkViewer.h  VtkViewerApp.cxx  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  vtkViewer.wdr  vtkViewer_wdr.cpp  vtkViewer_wdr.h  wxVTKRenderWindowInteractor.cxx  wxVTKRenderWindowInteractor.h
wxGui/: AboutDialog.cpp  AboutDialog.h  ApplyTransformDialog.cpp  ApplyTransformDialog.h  CLGOpticFlowDialog.cpp  CLGOpticFlowDialog.cxx  CLGOpticFlowDialog.h  CLGOpticalFlowDialog.cpp  CLGOpticalFlowDialog.h  CMakeLists.txt  CompositeImageFileSet.cxx  CompositeImageFileSet.h  ConnectVTKITK.h  DataSource.h  DataSourceDialog.cpp  DataSourceDialog.h  DialogLogger.cxx  DialogLogger.h  (+109 more)
(+109 files in other folders)
